// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocsLink Component should be able to be rendered with children nodes 1`] = `
<DocumentFragment>
  <a
    href="https://docs.mitmproxy.org/stable/bar"
    rel="noreferrer"
    target="_blank"
  >
    foo
  </a>
</DocumentFragment>
`;

exports[`DocsLink Component should be able to be rendered without children nodes 1`] = `
<DocumentFragment>
  <a
    href="https://docs.mitmproxy.org/stable/bar"
    rel="noreferrer"
    target="_blank"
  >
    <i
      class="fa fa-question-circle"
    />
  </a>
</DocumentFragment>
`;
